primer commit de la pagina
se impletan las paginas, estilos y bases

--- a/index.html
+++ b/index.html
@@ -4,9 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="Style.css">
+    <script src="JS.javaScript"></script>
+    <title>Pagina Principal </title>
 </head>
 <body>
-    <h1>hola este es mi primer repositorio github</h1>
-</body>
+    <header>
+        <div class="Menu-Nav">
+            <ul>
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="Pagina2/Pagina2.html">DANZAS</a></li>
+                <li><a href="Pagina3/Pagina3.html">CANTANTES</a></li>
+                <li><a href="Pagina3/Pagina3.html">APORTES</a></li>
+            </ul>
+        </div>
+    </header>
+        <h1>Herencia Cultural</h1>
+        <div class="imagenPrincipal">
+            <img  src="fotos/logo folklore.jpg" alt="logo Pagina" width="500px" height="300px">
+        <p>
+            Esta página hace importante reconocimiento a las diversas temáticas que aborda el folklore, 
+            esto es costumbres, tradiciones, vestimentas, peinados, comidas típicas, entre otras, 
+            con la intención de poder conocer y vivencias nuestra cultura Argentina. 
+        </p>
+        </div>
+        <p>
+            Aprenderemos sobre que vestimentas se utilizan en las distintas regiones y en las danzas, 
+            como es que surgieron, como bailar las danzas más típicas en una peña, por ejemplo, 
+            tales como Gato; Chacarera; Escondido; etc.  
+        </p>
+        <br>
+        <hr>
+        <br>
+        <div>
+            <span>* zona de carrusel *</span>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <footer>
+            <strong>Herencia Cultural</strong>
+            <p>
+                Las imágenes y videos utilizados no son de mi autoría, la información presentada fue 
+                sustraída de diversas páginas, testimonios y vivencias personales que transite y tránsito como bailarín  
+            </p>
+            <p>
+                Agradezco a mi academia y profes al brindarme la información necesaria e 
+                importante para poder realizar este proyecto y darme la autorización para crear la página. 
+            </p>
+            <p>
+                Disfruten del contenido. 
+            </p>
+        </footer>
 </html>
