agregacion de ideas
asentamiento de bases de ideas para completar

--- a/Pagina2/Pagina2.html
+++ b/Pagina2/Pagina2.html
@@ -408,7 +408,7 @@
     <br> 
     <hr> 
     <br>
-    <h2>REMEDIO ALTAMISQUEÑO</h2> 
+    <h2 id >REMEDIO ALTAMISQUEÑO</h2> 
     <span>Figuras a Ejecutar:</span> 
     <ol> 
         <li>Esquina con pañuelo (4 compases) </li> 
@@ -439,7 +439,7 @@
     <br> 
     <hr>
     <br>
-    <h2>MAROTE CHAQUEÑO</h2> 
+    <h2 id>MAROTE CHAQUEÑO</h2> 
     <span>Figuras a Ejecutar:</span> 
     <ol> 
         <li>2 esquinas (8 compases) </li> 
@@ -464,7 +464,7 @@
     <br> 
     <hr>
     <br>
-    <h2>JOTA CORDOBESA</h2> 
+    <h2 id>JOTA CORDOBESA</h2> 
     <span>Figuras a Ejecutar:</span> 
     <ol> 
         <li>Camino hacia la otra base (8 compases) </li> 
@@ -500,7 +500,7 @@
     <br> 
     <hr>
     <br>
-    <h2>FIRMEZA</h2> 
+    <h2 id >FIRMEZA</h2> 
     <span>Figuras a Ejecutar:</span> 
     <ol> 
         <li>4 esquinas (16 compases)</li> 
@@ -538,7 +538,7 @@
     <br> 
     <hr> 
     <br>
-    <h2>REMENSURA</h2> 
+    <h2 id>REMENSURA</h2> 
     <span>Figuras a Ejecutar:</span> 
     <ol> 
         <li>Vuelta entera con pañuelo (8 compases) </li> 
@@ -563,7 +563,7 @@
     <br> 
     <hr>
     <br>
-    <h2>CALANDRIA</h2> 
+    <h2 id >CALANDRIA</h2> 
     <span>Figuras a Ejecutar:</span> 
     <ol> 
         <li>Vuelta entera (8 compases)</li> 
@@ -578,7 +578,7 @@
     <br> 
     <hr> 
     <br>
-    <h2>HUELLA</h2> 
+    <h2 id >HUELLA</h2> 
     <span>Figuras a Ejecutar:</span> 
     <ol> 
         <li>Vuelta entera (8 compases)</li> 
@@ -615,7 +615,7 @@
     <br> 
     <hr> 
     <br>
-    <h2>TRIUNFO</h2> 
+    <h2 id >TRIUNFO</h2> 
     <span>Figuras a Ejecutar:</span> 
     <ol> 
         <li>Esquina (4 compases) </li> 
@@ -679,7 +679,7 @@
     <br>
     <hr>
     <br>
-    <h2>PAJARILLO</h2> 
+    <h2 id >PAJARILLO</h2> 
     <span>Figuras a Ejecutar:</span> 
     <ol> 
         <li>
