--- a/Pagina3/Pagina3.html
+++ b/Pagina3/Pagina3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../Style.css">
+    scr
     <title>Cantantes - Comentarios</title>
 </head>
 <body>
@@ -17,8 +18,32 @@
             </ul>
         </div>
     </header>
+    <h2>Cantantes:</h2>
     <p>
-        pagina 3
+        a continuacion presentaremos algunos cantantes conocidos,cantas conocidos de antaño,
+        algunos cantantes y grupos conocidos de la actualidad y redireccionaremos 
+        hacia las biografias pertenecientes de los mencionados 
     </p>
+    <table class="tablaArtistas">
+        <tr>
+            <td><a href="https://www.cmtv.com.ar/biografia/show.php?bnid=2520"> campedrinos</a></td>
+            <td><a href="https://es.wikipedia.org/wiki/Chaque%C3%B1o_Palavecino">chaqueño palovecino</a></td>
+        </tr>
+    </table>
+    <div>
+        <h2>Opiniones:</h2>
+        <p>
+            Su opinion si nos importa, si desea aportar ya sea con un comentario positivo, un consejo, 
+            que mencionemos una variante o que busquemos informacion mas 
+            profunda en cuanto los diversos temas mencionados a lo largo de la pagina le animamos 
+            a que nos deje su comentario.
+        </p>
+        <form action="" onsubmit=" return validar(event)" id="formulario">
+            <label for=""></label>
+            <input type="text">
+            <label for=""></label>
+        </form>
+    </div>
+    
 </body>
 </html>
