--- a/index.html
+++ b/index.html
@@ -38,6 +38,23 @@
         <br>
         <div>
             <span>* zona de carrusel *</span>
+            
+        </div>
+        <div id="recomendaciones">
+            <h2>RECOMENDACIONES:</h2>
+            <table>
+
+                <tr>
+                    <td><a href="Pagina2/Pagina2.html#seccionRemedioNorteño">remedio</a></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
         </div>
         <br>
         <hr>
