implementacion de nuevas secciones
se implementaron la seccion "un poco de historia" y "festivales"

--- a/Pagina2/Pagina2.html
+++ b/Pagina2/Pagina2.html
@@ -500,7 +500,7 @@
     <br> 
     <hr>
     <br>
-    <h2 id >FIRMEZA</h2> 
+    <h2 id="seccionFirmeza" >FIRMEZA</h2> 
     <span>Figuras a Ejecutar:</span> 
     <ol> 
         <li>4 esquinas (16 compases)</li> 
