--- a/Pagina3/Pagina3.html
+++ b/Pagina3/Pagina3.html
@@ -31,6 +31,25 @@
         </tr>
     </table>
     <div>
+        <h2>Festivales:</h2>
+        <h3>Festival Nacional de la Chacarera:</h3>
+        <div class="festivalNacionalDeLaChacarera">
+                <img src="../fotos/festival-chacarera-folklore-danza-1024x580.jpg" alt="festival Nacional de la Chcarera" width="500px" height="300px">
+                <p>
+                    Se celebra el 2 y 3 de enero en Santiago del Estero1. Es uno de los primeros festivales 
+                    celebrados este año. Nombrar a la chacarera, la danza más popular de nuestro folclore, 
+                    es nombrar a Santiago del Estero y es también nombrar a la familia Carabajal, cuya descendencia ha 
+                    dado con el correr de las décadas a varios de los máximos exponentes de su música1. 
+                </p>
+        </div>
+    </div>
+    <div>
+        <h2></h2>
+        <div>
+
+        </div>
+    </div>
+    <div>
         <h2>Opiniones:</h2>
         <p>
             Su opinion si nos importa, si desea aportar ya sea con un comentario positivo, un consejo, 
@@ -39,11 +58,11 @@
             a que nos deje su comentario.
         </p>
         <form action="" onsubmit=" return validar(event)" id="formulario">
-            <label for=""></label>
+            <label for="usuario">Ingrese su usuario:</label>
             <input type="text">
-            <label for=""></label>
+            <label for="comentario">Comente aqui:</label>
+            <input type="text">
         </form>
     </div>
-    
 </body>
 </html>
