--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <table>
 
                 <tr>
-                    <td><a href="Pagina2/Pagina2.html#seccionRemedioNorteño">remedio</a></td>
-                    <td></td>
-                    <td></td>
+                    <td><a href="Pagina2/Pagina2.html#seccionRemedioNorteño">Remedio Norteño</a></td>
+                    <td><a href="Pagina2/Pagina2.html#seccionFirmeza">Firmeza</a></td>
+                    <td><a href="Pagina2/Pagina2.html#seccionBailecito">Bailecito</a></td>
                 </tr>
                 <tr>
                     <td></td>
@@ -59,8 +59,48 @@
         <br>
         <hr>
         <br>
+        <div>
+            <h2>Un poco de Historia:</h2>
+            <p>
+                El folklore argentino tiene una historia rica y diversa, con influencias de varias culturas. 
+                Sus raíces se encuentran en las culturas indígenas originarias de Argentina. 
+                Con el tiempo, ciertos movimientos culturales, derivados de hechos históricos, introdujeron cambios. 
+            </p>
+            <p>
+                La colonización española tuvo un impacto significativo, al igual que la inmigración 
+                africana causada por el tráfico de esclavos durante los siglos XVI y XVIII. Además, 
+                la gran ola de inmigración europea entre 1880 y 1950 y la gran migración interna entre 1930 y 
+                1980 también contribuyeron a la evolución del folklore argentino.
+            </p>
+            <p>
+                En el siglo XVI, Juan Gabriel Lezcano, también conocido como Nuño Gabriel, 
+                llegó a Buenos Aires. Reunió a los indígenas locales con el objetivo de enseñarles 
+                nuevos cantos cristianos. Los primeros indígenas que recibieron la cultura española como 
+                influencia fueron los pertenecientes a la provincia de Tucumán. 
+            </p>
+            <p>
+                Para el siglo XVII, la música, la danza y el canto habían evolucionado hasta 
+                conseguir un desarrollo muy interesante. Varias provincias organizaban diferentes 
+                reuniones donde se podían apreciar estas expresiones artísticas.
+            </p>
+            <p>
+                El folklore como género musical comenzó a ser más popular en los años 30 y 40. 
+                Las olas de inmigración que llegaban del campo a las ciudades trajeron consigo esa 
+                música y la expandieron. En los años 50, finalmente, se dio el “boom del folklore”, 
+                cuando se convirtió en el género principal de la música popular nacional junto con el tango. 
+            </p>
+            <p>
+                Es importante destacar que cada región de Argentina tiene características 
+                propias que la diferencian de las demás en términos de folklore. La cultura que se 
+                desprende de cada provincia tiene características que le son propias y 
+                las diferencian de las demás.
+            </p>
+        </div>
+        <br>
+        <hr>
+        <br>
         <footer>
-            <strong>Herencia Cultural</strong>
+            <h2>Herencia Cultural</h2>
             <p>
                 Las imágenes y videos utilizados no son de mi autoría, la información presentada fue 
                 sustraída de diversas páginas, testimonios y vivencias personales que transite y tránsito como bailarín  
