completamientos de datos
se cargaron información e imágenes faltante,  se cambio fondo, simplificacion de codigo, etc

--- a/Pagina3/Pagina3.html
+++ b/Pagina3/Pagina3.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../Style.css">
-    scr
     <title>Cantantes - Comentarios</title>
 </head>
 <body>
@@ -14,15 +13,15 @@
                 <li><a href="../index.html">INICIO</a></li>
                 <li><a href="../Pagina2/Pagina2.html">DANZAS</a></li>
                 <li><a href="../Pagina3/Pagina3.html">CANTANTES</a></li>
-                <li><a href="../Pagina3/Pagina3.html">APORTES</a></li>
+                <li><a href="../Pagina3/Pagina3.html#aportes">APORTES</a></li>
             </ul>
         </div>
     </header>
     <h2>Cantantes:</h2>
     <p>
-        a continuacion presentaremos algunos cantantes conocidos,cantas conocidos de antaño,
+        A continuacion, presentaremos algunos cantantes conocidos,cantas conocidos de antaño,
         algunos cantantes y grupos conocidos de la actualidad y redireccionaremos 
-        hacia las biografias pertenecientes de los mencionados 
+        hacia las biografias pertenecientes de los mencionados. 
     </p>
     <table class="tablaArtistas">
         <tr>
@@ -36,32 +35,114 @@
         <div class="festivalNacionalDeLaChacarera">
                 <img src="../fotos/festival-chacarera-folklore-danza-1024x580.jpg" alt="festival Nacional de la Chcarera" width="500px" height="300px">
                 <p>
-                    Se celebra el 2 y 3 de enero en Santiago del Estero1. Es uno de los primeros festivales 
+                    Se celebra el 2 y 3 de enero en Santiago del Estero. Es uno de los primeros festivales 
                     celebrados este año. Nombrar a la chacarera, la danza más popular de nuestro folclore, 
                     es nombrar a Santiago del Estero y es también nombrar a la familia Carabajal, cuya descendencia ha 
-                    dado con el correr de las décadas a varios de los máximos exponentes de su música1. 
+                    dado con el correr de las décadas a varios de los máximos exponentes de su música. 
                 </p>
         </div>
     </div>
     <div>
-        <h2></h2>
-        <div>
-
+        <h3>Festival Nacional del Malambo:</h3>
+        <div class="FestivalNacionalDelMalambo:">
+            <img src="../fotos/FestivalMalambo.jpg" alt="Festival Nacional de Malambo">
+            <p>
+                Se celebra del 6 al 11 de enero en Laborde, Córdoba. 
+                Es una competencia que desde 1966 convoca a los mayores especialistas del 
+                país para elegir al mejor exponente de esta disciplina.
+            </p>
         </div>
     </div>
     <div>
+        <h3>Festival Nacional de Doma y Folklore:</h3>
+        <div>
+            <img src="../fotos/FestivalDomaJineteada.jpeg" alt="Festival Doma y Jineteada" width="500px" height="300px">
+            <p>
+                Se realiza en la ciudad de Jesús María, durante la primera quincena del mes de enero y 
+                tiene como eje central la doma y jineteada de caballos baguales, 
+                generalmente en las especialidades de gurupa surera, crina limpia, y bastos.
+            </p>
+        </div>
+    </div>
+    <div>
+        <h3>Fiesta Nacional del Poncho:</h3>
+        <div>
+            <img src="../fotos/FestivalPoncho.jpeg" alt="Festival del poncho" width="500px" height="300px">
+            <p>
+                Es una popular celebración en Argentina que rinde homenaje a la tradicional prenda del poncho. 
+                Se celebra anualmente en la ciudad de Catamarca entre las fechas 15 al 24 de julio
+                , ubicada en el noroeste del país. 
+                El festival comenzó en 1954 como un pequeño evento y desde entonces se ha convertido en una 
+                de las cuatro celebraciones populares más importantes de Argentina.
+            </p>
+        </div>
+    </div>
+    <div>
+        <h3>Fiesta Nacional del Estudiante:</h3>
+        <div>
+            <img src="../fotos/FestivalNacionalEstudiante.jpg" alt="Festival Nacional del Estudiante" width="500px" height="300px" > 
+            <p>
+                Es una festividad originaria de San Salvador de Jujuy que se celebra con carácter 
+                anual en distintos puntos de la Provincia de Jujuy, Argentina. 
+                La Fiesta tiene lugar durante la Semana del Estudiante argentina y da la bienvenida 
+                a la primavera, que inicia el 21 de septiembre en el hemisferio sur. Se celebra a 
+                fines del mes de septiembre por aproximadamente 10 días, conmemorando el cambio de 
+                estación y a la juventud mediante tres eventos principales dirigidos principalmente 
+                a los estudiantes de educación secundaria y seguidos por casi la totalidad de la población jujeña.
+            </p>
+            <p>
+                Manteniendo la tradición iniciada a inicios de la década de los años 1950 a nivel local, 
+                que se extendió a nivel nacional dos décadas después, 
+                se dice que en esa época Jujuy se transforma en la Capital Nacional de la Juventud y la Primavera.
+            </p>
+        </div>
+    </div>
+    <div>
+        <h3>Fiesta Nacional del Cordero:</h3>
+        <div>
+            <img src="../fotos/fiesta-del-cordero.jpg" alt="Fiesta del Cordero" width="500px" height="300px">
+            <p>
+                La Fiesta Nacional del Cordero es una fiesta popular que se realiza en Argentina 
+                que se realiza en el mes de enero, en la ciudad de Puerto Madryn, provincia del Chubut.
+            </p>
+            <p>
+                La fiesta tiene como objetivo mostrar las tradiciones Argentinas y las del hombre de 
+                campo argentino como por ejemplo las jineteadas, la esquila de las ovejas 
+                (haciéndose muestras de esquila), las tradicionales comidas 
+                argentinas como el asado, entre otras tradiciones.
+            </p>
+        </div>
+    </div>
+    <div>
+        <h3>Fiesta Nacional del Sol:</h3>
+        <div>
+            <img src="../fotos/Fiesta_Nacional_del_Sol.jpg" alt="Fiesta Nacional del Sol" width="500px" height="300px">
+            <p>
+                es una celebración, evento o festival que se lleva a cabo anualmente en la 
+                Provincia de San Juan (Argentina) durante la última semana del mes de febrero, 
+                a lo largo de cinco días. Dando a través de ella una muestra itineraria de las 
+                actividades económicas, costumbres, cultura, personajes y hechos históricos de dicha provincia y el país.
+            </p>
+            <p>
+                La primera Fiesta del Sol se llevó a cabo en 1972, y recibió denominaciones 
+                como Ferisol en 1978, o Exposol en 1992. En 1993, al 
+                categorizarla como nacional, se comenzó a denominar Fiesta Nacional del Sol.
+            </p>
+        </div>
+    </div>
+    <div id="aportes">
         <h2>Opiniones:</h2>
         <p>
             Su opinion si nos importa, si desea aportar ya sea con un comentario positivo, un consejo, 
-            que mencionemos una variante o que busquemos informacion mas 
-            profunda en cuanto los diversos temas mencionados a lo largo de la pagina le animamos 
+            que mencionemos una variante o que busquemos informacion más 
+            profunda, en cuanto los diversos temas mencionados a lo largo de la pagina, le animamos 
             a que nos deje su comentario.
         </p>
         <form action="" onsubmit=" return validar(event)" id="formulario">
             <label for="usuario">Ingrese su usuario:</label>
             <input type="text">
             <label for="comentario">Comente aqui:</label>
-            <input type="text">
+            
         </form>
     </div>
 </body>
