--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="index.html">INICIO</a></li>
                 <li><a href="Pagina2/Pagina2.html">DANZAS</a></li>
                 <li><a href="Pagina3/Pagina3.html">CANTANTES</a></li>
-                <li><a href="Pagina3/Pagina3.html">APORTES</a></li>
+                <li><a href="Pagina3/Pagina3.html#aportes">APORTES</a></li>
             </ul>
         </div>
     </header>
@@ -23,9 +23,9 @@
         <div class="imagenPrincipal">
             <img  src="fotos/logo folklore.jpg" alt="logo Pagina" width="500px" height="300px">
         <p>
-            Esta página hace importante reconocimiento a las diversas temáticas que aborda el folklore, 
-            esto es costumbres, tradiciones, vestimentas, peinados, comidas típicas, entre otras, 
-            con la intención de poder conocer y vivencias nuestra cultura Argentina. 
+            Esta página hace importante reconocimiento a las diversas temáticas que aborda el folklore. 
+            Esto es costumbres, tradiciones, vestimentas, peinados, comidas típicas, entre otras. 
+            Con la intención de poder conocer las vivencias de nuestra cultura Argentina. 
         </p>
         </div>
         <p>
