--- a/Pagina2/Pagina2.html
+++ b/Pagina2/Pagina2.html
@@ -13,7 +13,7 @@
                 <li><a href="../index.html">INICIO</a></li>
                 <li><a href="../Pagina2/Pagina2.html">DANZAS</a></li>
                 <li><a href="../Pagina3/Pagina3.html">CANTANTES</a></li>
-                <li><a href="../Pagina3/Pagina3.html#aportes">APORTES</a></li>
+                <li><a href="../Pagina3/Pagina3.html#reseñas">RESEÑAS</a></li>
             </ul>
         </div>
     </header>
@@ -783,6 +783,5 @@
         gyroscope; picture-in-picture; web-share" allowfullscreen>
     </iframe>
     
-        
 </body>
 </html>
