--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="Style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@1,100&display=swap" rel="stylesheet">
     <script src="JS.javaScript"></script>
     <title>Pagina Principal </title>
 </head>
@@ -15,10 +18,11 @@
                 <li><a href="index.html">INICIO</a></li>
                 <li><a href="Pagina2/Pagina2.html">DANZAS</a></li>
                 <li><a href="Pagina3/Pagina3.html">CANTANTES</a></li>
-                <li><a href="Pagina3/Pagina3.html#aportes">APORTES</a></li>
+                <li><a href="Pagina3/Pagina3.html#reseñas">RESEÑAS</a></li>
             </ul>
         </div>
     </header>
+    <div class="introduccion"n>
         <h1>Herencia Cultural</h1>
         <div class="imagenPrincipal">
             <img  src="fotos/logo folklore.jpg" alt="logo Pagina" width="500px" height="300px">
@@ -33,6 +37,8 @@
             como es que surgieron, como bailar las danzas más típicas en una peña, por ejemplo, 
             tales como Gato; Chacarera; Escondido; etc.  
         </p>
+    </div>
+        
         <br>
         <hr>
         <br>
@@ -43,17 +49,17 @@
         <div id="recomendaciones">
             <h2>RECOMENDACIONES:</h2>
             <table>
-
+                <tr>
+                    <td><a href="Pagina2/Pagina2.html#seccionGato">Gato</a></td>
+                    <td><a href="Pagina2/Pagina2.html#seccionChacarera">Chacarera</a></td>
+                    <td><a href="Pagina2/Pagina2.html#seccionEscondido">Escondido</a></td>
+                </tr>
                 <tr>
                     <td><a href="Pagina2/Pagina2.html#seccionRemedioNorteño">Remedio Norteño</a></td>
                     <td><a href="Pagina2/Pagina2.html#seccionFirmeza">Firmeza</a></td>
                     <td><a href="Pagina2/Pagina2.html#seccionBailecito">Bailecito</a></td>
                 </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
+                
             </table>
         </div>
         <br>
