--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@1,100&display=swap" rel="stylesheet">
-    <script src="JS.javaScript"></script>
+    <script src="carusel.javaScript"></script>
     <title>Pagina Principal </title>
 </head>
 <body>
@@ -42,9 +42,14 @@
         <br>
         <hr>
         <br>
-        <div>
-            <span>* zona de carrusel *</span>
-            
+        <div class="contenedorCarusel">
+            <div class="btnAvanzar">
+                &#62
+            </div>
+            <div class="btnRetroceder">
+                &#60
+            </div>
+            <img src="fotos/imgCarusel1.jpg" alt="" id="imagenCarusel">
         </div>
         <div id="recomendaciones">
             <h2>RECOMENDACIONES:</h2>
